Properly return the right value

--- a/views/index.erb
+++ b/views/index.erb
@@ -307,7 +307,7 @@
     if (domain_map[input] !== undefined) {
       return domain_map[input]
     }
-    input
+    return input
   }
 
   $(function () {
